unitycatalog-rs/src/oss/snapshots/unitycatalog_rs__oss__catalogs__tests__not_found.snap
---
source: src/oss/catalogs.rs
expression: res
---
Err(
    CatalogNotFound(
        "mycatalog",
    ),
)
