unitycatalog-rs/src/oss/snapshots/unitycatalog_rs__oss__catalogs__tests__round_trip.snap
---
source: src/oss/catalogs.rs
expression: "(initial_list, cinfo, in_list, cinfo_patched, after_list)"
---
(
    ListCatalogResponse {
        catalogs: [
            CatalogInfo {
                name: Some(
                    "unity",
                ),
                comment: Some(
                    "Main catalog",
                ),
                properties: Some(
                    {},
                ),
                created_at: Some(
                    TIMESTAMP,
                ),
                updated_at: None,
                id: Some(
                    "PID",
                ),
            },
        ],
        next_page_token: None,
    },
    CatalogInfo {
        name: Some(
            "mycatalog",
        ),
        comment: None,
        properties: None,
        created_at: Some(
            TIMESTAMP,
        ),
        updated_at: None,
        id: Some(
            "PID",
        ),
    },
    ListCatalogResponse {
        catalogs: [
            CatalogInfo {
                name: Some(
                    "unity",
                ),
                comment: Some(
                    "Main catalog",
                ),
                properties: Some(
                    {},
                ),
                created_at: Some(
                    TIMESTAMP,
                ),
                updated_at: None,
                id: Some(
                    "PID",
                ),
            },
            CatalogInfo {
                name: Some(
                    "mycatalog",
                ),
                comment: None,
                properties: Some(
                    {},
                ),
                created_at: Some(
                    TIMESTAMP,
                ),
                updated_at: None,
                id: Some(
                    "PID",
                ),
            },
        ],
        next_page_token: None,
    },
    CatalogInfo {
        name: Some(
            "mycatalog",
        ),
        comment: Some(
            "new comment",
        ),
        properties: Some(
            {},
        ),
        created_at: Some(
            TIMESTAMP,
        ),
        updated_at: Some(
            TIMESTAMP,
        ),
        id: Some(
            "PID",
        ),
    },
    ListCatalogResponse {
        catalogs: [
            CatalogInfo {
                name: Some(
                    "unity",
                ),
                comment: Some(
                    "Main catalog",
                ),
                properties: Some(
                    {},
                ),
                created_at: Some(
                    TIMESTAMP,
                ),
                updated_at: None,
                id: Some(
                    "PID",
                ),
            },
        ],
        next_page_token: None,
    },
)
